@@ -1,3 +1,9 @@
+2012-05-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Use a less pretentious name for rcs.c state struct.
+
+	* rcs.c: Do ‘s/struct admin_closure/struct adminstuff/g’.
+
 2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Add abstraction: SIZEOF_NLINES
